--- a/src/Views/index.html
+++ b/src/Views/index.html
@@ -1,11 +1,50 @@
-<html>
-
+<!DOCTYPE html>
+<html style="height: 100%">
 <head>
-
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
+<body style="background-color: #5f5f5f; height: 100%">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col"><h3>Klinika</h3></div>
+            <div class="col"></div>
+            <div class="col">
+                <form method="POST">
+                    <input type="text" id="username_field" name="username"/>
+                    <input type="password" id="password_field" name="password"/>
+                    <input type="submit"/>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid" style="background-color: #ffffff; height: 100%">
+        <div style="height: 100%; min-height: 100%">
+            <div class="container" style="background-color: #b3b3b3">Witamy w klinice</div>
+        </div>
+    </div>
+    <script>
+        $( 'form' ).submit(function ( e ) {
+            var data, xhr;
 
-<body>
-    wololololo
+            data = {};
+            data["username"]=$('#username_field').val();
+            data["password"]=$('#password_field').val();
+            
+            sessionStorage.setItem("username", data["username"]);
+            xhr = new XMLHttpRequest();
+            
+            xhr.open( 'POST', '/login/'+data["username"], true );
+            xhr.onreadystatechange = function ( response ) {
+                if(xhr.status == 200) window.location.replace('/landing.html');
+                else  $('#username_field').css('background-color', 'red');
+            };
+            xhr.send( data );
+
+            e.preventDefault();
+        });
+    </script>
 </body>
-
 </html>
