--- a/src/Views/admin.html
+++ b/src/Views/admin.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <style>
+    td {padding: 10px;}
+    </style>
 </head>
 <body style="background-color: #5f5f5f; height: 100%">
     <div class="container-fluid" style="background-color: #ffffff; height: 100%">
@@ -16,12 +19,15 @@
                             <td><input id="newUserName" type="text" name="username"/></td>
                             <td><input id="newUserPass" type="text" name="password"/></td>
                             <td><input id="newUserRole" type="text" name="role"/></td>
-                            <td><input type="submit"/></td>
+                            <td><input type="submit" value="Add"/></td>
                         </form>
-                        <td><button>Logout</button></td>
+                        <td><button id="delButton">Delete</button></td>
+                        <td><button id="logButton">Logout</button></td>
                     </tr>
                     <form id="contentTable">
-                        
+                        <div id="content">
+
+                        </div>
                     </form>
                 </table>
             </div>
@@ -37,36 +43,51 @@
                 success: function (data) { 
                     $.each(data, function(index, element) {
                         var row = $('<tr>', {id: element.username});
-                        row.append('<input>', {type: "radio", name: "userDel", value: element.username});
+                        row.append($('<input>', {type: "radio", name: "userDel", value: element.username}));
                         row.append($('<td>', {text: element.username}));
                         $.each(element.roles, function(index2, element2) {
-                            row.append('<td>', {text: element2});
+                            row.append($('<td>', {text: element2}));
                         });
-                        $('#contentTable').append(row);
+                        $('#content').append(row);
                     });
+                },
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Username': sessionStorage.getItem("username")
                 }
             });
         });
-        $("#contentTable").submit(function(){
-            var xhr;
-            xhr = new XMLHttpRequest();
-            xhr.open( 'DELETE', '/users/'+$('input[name=userDel]:checked').val(), true );
-            document.getElementById($('input[name=userDel]:checked').val()).remove();
-            xhr.send( );
-            e.preventDefault();
+        $("#delButton").click(function(){
+            $.ajax({ 
+                type: 'DELETE', 
+                url: '/users/'+$('input[name=userDel]:checked').val(), 
+                crossDomain: true,
+                success: function (data) { 
+                    location.reload();
+                },
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Username': sessionStorage.getItem("username")
+                }
+            });
+        });
+        $("#logButton").click(function(){
+            sessionStorage.removeItem("username");
+            window.parent.location.replace('/index.html');
         });
         $("#addUserForm").submit(function(){
-            var xhr, data;
-            data = {};
-            data["username"]=$("#newUserName").val();
-            data["password"]=$("#newUserPass").val();
-            data["roles"]={  };
-            data["roles"][0]=$("#newUserRole").val();
-            
+            var xdata, ydata;
+            xdata = {};
+            xdata["username"]=$("#newUserName").val();
+            xdata["password"]=$("#newUserPass").val();
+            xdata["roles"]=[$("#newUserRole").val()];
+            ydata = {};
+            ydata["newUser"] = xdata;
+            alert(JSON.stringify(ydata));
             $.ajax({ 
                 type: 'POST', 
                 url: '/users/', 
-                data: JSON.stringify(data), 
+                data: JSON.stringify(ydata), 
                 crossDomain: true,
                 dataType: 'json',
                 success: function (data) { 
@@ -77,8 +98,6 @@
                     'Username': sessionStorage.getItem("username")
                 }
             });
-            
-            e.preventDefault();
         });
     </script>
 </body>
