--- a/src/Views/doctor.html
+++ b/src/Views/doctor.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <style>
+    td {padding: 10px;}
+    </style>
 </head>
 <body style="background-color: #5f5f5f; height: 100%">
     <div class="container-fluid" style="background-color: #ffffff; height: 100%">
         <div style="height: 100%; min-height: 100%">
             <div class="container" style="background-color: #b3b3b3">
                 <table>
+                    <tr>
+                        <td><button id="logButton">Logout</button></td>
+                    </tr>
                     <form id="contentTable">
-                        
+                        <div id="content"></div>
                     </form>
                 </table>
             </div>
@@ -27,16 +33,24 @@
                 dataType: 'json',
                 success: function (data) { 
                     $.each(data, function(index, element) {
-                        var row = $('<tr>');
+                        var row = $('<tr>', {id: element._id});
                         row.append($('<td>', {text: element.date}));
                         row.append($('<td>', {text: element.patient}));
                         $.each(element.roles, function(index2, element2) {
-                            row.append('<td>', {text: element2.type});
+                            row.append($('<td>', {text: element2.type}));
                         });
-                        $('#contentTable').append(row);
+                        $('#content').append(row);
                     });
+                },
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Username': sessionStorage.getItem("username")
                 }
             });
+        });
+        $("#logButton").click(function(){
+            sessionStorage.removeItem("username");
+            window.parent.location.replace('/index.html');
         });
     </script>
 </body>
